Jeg lærte om `<span>`-taggen for å bruke inline styling på tekst og små elementer, og la til denne i menyseksjonen for å formatere pris og navn separat - Brukte `position: fixed;` på footeren for å sikre at den alltid vises nederst på siden, uavhengig av innholdets lengde - Justerte `bottom`, `width`, og `z-index` i CSS for å få footeren til å fungere responsivt og forbli synlig - Oppdaterte navigasjonsknapper og hover-effekter for bedre brukeropplevelse - Forbedret layout og legg til mørk modus for en bedre brukeropplevelse

--- a/kantine.css
+++ b/kantine.css
@@ -73,9 +73,8 @@ footer {
     padding: 3px;
     background-color: rgb(52, 46, 46);
     color: white;
-    position: absolute; 
+    position: fixed; 
     bottom: 0; 
-    
     z-index: 10;
     width: 100%;
   }
