--- a/kontakt.css
+++ b/kontakt.css
@@ -1,5 +1,7 @@
 h1 {
     text-align: center;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:darkorange
 }
 
 body {
@@ -7,8 +9,8 @@ body {
     margin: 0;
     padding: 0;
     background-image: url("https://www.akademiet.no/wp-content/uploads/2023/04/akademiet_oransje_rgb-1000x398.png");
-    background-position: 50% 15%;
-    background-size: 25% auto; 
+    background-position: 50% 80%;
+    background-size: 20% auto; 
     background-repeat: no-repeat; 
     background-attachment: fixed;
 }
@@ -58,11 +60,6 @@ a:hover {
     height: 50px; 
 }
 
-h1 {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:darkorange
-}
-
 h2 {
     margin: 0; 
     padding: 0;
@@ -87,7 +84,7 @@ footer {
     padding: 3px;
     background-color: rgb(52, 46, 46);
     color: white;
-    position: absolute; 
+    position: fixed; 
     bottom: 0; 
     z-index: 10;
     width: 100%;
